	* New disconnected account dialog (Thanks, Daniel Atallah)
	* Fixes several Jabber bugs
	* Fixes the bug where some dialogs would crash when spell checking was
	  enabled. Closes #827930.
	* Fixes outgoing mobile pages on MSN.
	* The border on the close buttons on inactive tabs are no longer shown,
	  thanks to a fix used by Galeon.
	* Compatible with autoconf 2.58.
	* Changed the parameters for the received-chat-msg signal.
	* Chinese (Simplified) translation updated (Funda Wang)
	* Chinese (Traditional) translation updated (Ambrose C. Li)
	* Danish translation updated (Morten Brix Pedersen (mbrix))
	* Finnish translation updated (Arto Alakulju)
	* French translation updated (Eric Boumaour)
	* German translation updated (Bjoern Voigt)
	* Hindi trnaslation updated (Ravi (raviratlami))
	* Italian translation updated (Claudio Satriano)
	* Norwegian translation updated (Petter Johan Olsen)
	* Serbian Latin translation updated (Danilo Segan)
	* Swedish translation updated (Tore Lundqvist (luntor))

version 0.72 (10/31/2003):
	* Added a search feature to conversations.
	* Added an option to remove the formatting toolbar, both globally and
	  on a per-window basis (Nathan Fredrickson)
	* Added a drop shadow to the buddy list tooltip
	* Smileys are copyable
	* Fixed the ICQ login crash
	* Fixed a crash in the Add Chat dialog when selecting an
	  account that doesn't support chats. Closes bug #821606.
	* Fixed a bug where new MSN accounts without buddies added wouldn't
	  connect.
	* Fixed a crash when deleting an account that has IMs or chats open.
	  Closes bug #821630.
	* Smileys have background colors
	* If SSL is not enabled, MSN will load, but error on connect.
	* Disable Jabber SASL auth until the standard stabilizes
	* Chinese (Simplified) translation updated (Funda Wang)
	* Chinese (Traditional) translation updated (Ambrose C. Li)
	* Czech translation updated (Stanislav Brabec, Miloslav Trmac)
	* Danish translation updated (Morten Brix Pedersen (mbrix))